fixed first page

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ i {
   height: 21px;
   margin-left: 126px;
   margin-top: -23px;
-  border: px;
+  border: 1px;
   color: #21243D;
 }
 .dp1 {
@@ -162,7 +162,7 @@ i {
   height: 21px;
   margin-left: 126px;
   margin-top: -23px;
-  border: px;
+  border: 1px;
   color: #21243D;
 }
 .dp2 {
