--- a/style1.css
+++ b/style1.css
@@ -6,6 +6,7 @@ body {
   background: #000;
 }
 .cont {
+  position: relative;
   width: 375px;
   height: 1261px;
   background: #FFFFFF;
@@ -22,6 +23,27 @@ body {
 }
 i {
   font-size: 30px;
+}
+.nav {
+  display: none;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 375px;
+  height: 100vh;
+  background: #123456;
+  list-style-type: none;
+}
+.white-icon {
+  color: #fff;
+}
+.nav a {
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
 }
 .blog {
   width: 62px;
