--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ i {
   font-size: 30px;
 }
 .nav {
-  display: flex;
+  display: none;
   align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
@@ -44,7 +44,6 @@ i {
   color: white;
   font-size: 20px;
   text-decoration: none;
-
 }
 .img-wrapper {
   width: 170px;
