--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ i {
   cursor: pointer;
 }
 i:hover{
-  outline: 1px solid red;
+  outline: 2px dashed #EC7C26;
 }
 .nav {
   display: none;
@@ -48,7 +48,7 @@ i:hover{
   cursor: pointer;
 }
 .nav *:hover{
-  color: rgb(255, 196, 0)
+  color: #308446;
 }
 .white-icon {
   color: #fff;
