--- a/style2.css
+++ b/style2.css
@@ -24,8 +24,29 @@ body {
   align-items: center;
   padding-inline: 15px;
 }
+.more {
+  margin-top: 10px;
+  text-align: center;
+  position: absolute;
+  left: 15px;
+  top: 0px;
+}
+.more a {
+  color:#000;
+  text-decoration: none;
+  font-size: 25px;
+  font-weight: 800;
+  font-family: Heebo;
+}
 i {
   font-size: 30px;
+}
+i:hover{
+  outline: 2px dashed #EC7C26;
+}
+.fa-bars {
+  position: absolute;
+  right: 15px;
 }
 .nav {
   display: none;
@@ -39,6 +60,12 @@ i {
   height: 100vh;
   background: #123456;
   list-style-type: none;
+}
+.nav *{
+  cursor: pointer;
+}
+.nav *:hover{
+  color: #308446;
 }
 .white-icon {
   color: #fff;
@@ -183,19 +210,8 @@ i {
   padding-inline: 16px;
   color: #E0E0E0;
 }
-.more {
-  margin-top: 10px;
-  text-align: center;
-}
-.more a {
-  color:#000;
-  text-decoration: none;
-  font-size: 25px;
-  font-weight: 800;
-  font-family: Heebo;
-}
 .footer {
-  height: 147px;
+  height: 182px;
   width: 375px;
   position: absolute;
   top: 1116px;
