--- a/style3.css
+++ b/style3.css
@@ -9,6 +9,7 @@
     background: #000;
   }
   .cont {
+    position: relative;
     width: 375px;
     height: 1637px;
     background: #FFFFFF;
@@ -19,17 +20,51 @@
     height: 50px;
     background: #FFFFFF;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
+    justify-content: space-around;
     padding-inline: 15px;
+  }
+  .nav {
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 375px;
+    height: 100vh;
+    background: #123456;
+    list-style-type: none;
+  }
+  .nav *{
+    cursor: pointer;
+  }
+  .nav *:hover{
+    color: #308446;
+  }
+  .white-icon {
+    color: #fff;
+  }
+  .nav a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
   }
   .fa-circle-chevron-left {
     text-decoration: none;
     color: #000;
-    
+    margin-left: 0px;
+    margin-top: 1px;
+  }
+  .fa-bars {
+    margin-left: 288.5px;
   }
   i {
     font-size: 30px;
+  }
+  i:hover{
+    outline: 2px dashed #EC7C26;
   }
   .name {
     height: 80px;
