--- a/style2.css
+++ b/style2.css
@@ -26,23 +26,27 @@ body {
 }
 .more {
   margin-top: 10px;
-  text-align: center;
   position: absolute;
   left: 15px;
   top: 0px;
 }
 .more a {
   color:#000;
-  text-decoration: none;
-  font-size: 25px;
-  font-weight: 800;
-  font-family: Heebo;
 }
 i {
   font-size: 30px;
 }
 i:hover{
   outline: 2px dashed #EC7C26;
+}
+.fa-circle-down:hover {
+  outline: none;
+}
+.down {
+  margin-left: 15px;
+}
+.down a {
+  color: #000;
 }
 .fa-bars {
   position: absolute;
@@ -84,7 +88,6 @@ i:hover{
   line-height: 60px;
   text-align: left;
   margin-left: 18px;
-  margin-top: 24px;
 }
 .btc {
   width: 339px;
@@ -214,7 +217,7 @@ i:hover{
   height: 182px;
   width: 375px;
   position: absolute;
-  top: 1116px;
+  top: 1079px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -253,4 +256,14 @@ i:hover{
   width: 222px;
   height: 21px;
   margin-left: 74px;
+}
+.fa-circle-up:hover {
+  outline: none;
+}
+.up {
+  margin-left: 15px;
+  margin-top: -40px;
+}
+.up a {
+  color: #000;
 }
