--- a/style3.css
+++ b/style3.css
@@ -66,6 +66,15 @@
   i:hover{
     outline: 2px dashed #EC7C26;
   }
+  .fa-circle-down:hover {
+    outline: none;
+  }
+  .down {
+    margin-left: 15px;
+  }
+  .down a {
+    color: #000;
+  }
   .name {
     height: 80px;
     width: 339px;
@@ -213,4 +222,14 @@
     width: 222px;
     height: 21px;
     margin-left: 74px;
+  }
+  .fa-circle-up:hover {
+    outline: none;
+  }
+  .up {
+    margin-left: 15px;
+    margin-top: -40px;
+  }
+  .up a {
+    color: #000;
   }
