--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ i:hover{
   height: 47px;
   display: block;
   margin: 0 auto;
-  background: #FF6464;
+  background: #2dcc42;
   color: white;
   font-family: Heebo;
   font-size: 20px;
